# pbg-pennylane-adversarial

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  Singularity.def  USE_CASES.md  comparison.html  pyproject.toml  workspace.yaml
.github/workflows/: publish-dashboard.yml  publish-reports.yml  release.yml  workspace-ci.yml
app/: cli.py
demo/: demo_report.py  report.html
docs/investigation_a1_qgrnn_surrogate/: build_report.py  report.html  results.json  run_baseline_gate.py
docs/investigation_chunk3_high_dim_scaling/: build_report.py  report.html  results.json  run_sweep.py
pbg_pennylane_adversarial/: __init__.py  baselines.py  dynamics_baselines.py  processes.py  qgrnn_surrogate.py  report.py  utils.py
pbg_pennylane_adversarial/composites/: __init__.py  adversarial.py
pbg_pennylane_adversarial/dataset_transform/: __init__.py  loader.py  reader.py  synthetic_dynamics.py  transform.py  wcm_loader.py  writer.py
scripts/: check-no-local-paths.sh  feature_dashboard_in_readme.py  gh-pages-landing.html  inject_index_fragment.py  publish_dashboard.sh  publish_investigation_reports.py
scripts/_catalog/: README.md
tests/: test_baselines.py  test_composites.py  test_dynamics_baselines.py  test_processes.py  test_qgrnn_surrogate.py  test_report.py
tests/test_dataset_transform/: test_format_cmd.py  test_from_wcm_cli.py  test_synthetic_dynamics.py  test_wcm_loader.py
workspace/reports/: index.html
